# akisa-ai

./: .env.example  .gitignore  API_ENDPOINTS.md  FEATURES_IMPLEMENTATION.md  LICENSE  Makefile  README.md  test-api.sh
agents/: README.md  agent-definitions.json
ai-core/: CMakeLists.txt  README.md
ai-core/src/: main.cpp
backend/: AkisaAi.Api.csproj  Dockerfile  Program.cs  README.md
backend/Data/: InMemoryStore.cs
backend/Models/: AgentModels.cs  AuthModels.cs  ChatModels.cs  MemoryModels.cs  MultimodalModels.cs  PluginModels.cs  User.cs
backend/Services/: AgentOrchestrationService.cs  AiService.cs  ChatStreamingService.cs  ComparisonService.cs  JwtTokenService.cs  ModelRouterService.cs  OpenAiService.cs  PluginService.cs  RedisService.cs  VectorMemoryService.cs  VisionService.cs  VoiceService.cs
datasets/: README.md  sample-dataset.json
desktop-app/: README.md  desktop-manifest.json  index.html  package.json
docs/: architecture.md  comparison.md  roadmap.md  setup.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
inference-engine/: CMakeLists.txt  README.md
inference-engine/src/: main.cpp
infrastructure/: README.md  docker-compose.yml
kubernetes/: README.md  backend-deployment.yaml  frontend-deployment.yaml
mobile-app/: README.md  app-manifest.json  index.html  package.json
plugins/: README.md  sample-plugin.json
research/: README.md  experiment-notes.md
sdk/: README.md
training/: README.md  pipeline.md
vector-memory/: README.md  VectorMemory.cs
(+6 files in other folders)
